Dark info-sheet, cards header, xrp icon, ongoing process

--- a/src/pages/settings/settings.scss
+++ b/src/pages/settings/settings.scss
@@ -56,6 +56,11 @@ page-about {
     }
   }
 
+  .count-note {
+    min-width: 85px;
+    text-align: center;
+  }
+
   .create-button {
     background: white;
     color: color($colors, primary);
