--- a/src/theme/light.scss
+++ b/src/theme/light.scss
@@ -4,7 +4,7 @@
     transition: background-color, color, 250ms cubic-bezier(0, 0, 0.3, 0.3) !important;
   }
 
-  // General -----
+  // General
   page-settings {
     .content {
       @include transition();
@@ -26,7 +26,7 @@
       @include transition();
     }
 
-    // Lists -----
+    // Lists
     .bp-list {
       .item {
         &.item-ios,
