--- a/src/theme/dark.scss
+++ b/src/theme/dark.scss
@@ -29,29 +29,29 @@
   $bg-color-dark-theme: #121212;
   $bg-color-dark-theme-2: #1d1d1d;
   $bg-color-dark-theme-3: #383838;
-  
+
   $bg-color-dark-theme-toolbar: #121212;
   $bg-color-dark-theme-message: #1d1d1d;
   $gradient-dark-theme: #101010;
-  
+
   // 1.2 - Text
   $text-color-dark-theme: rgba(255, 255, 255, 0.87);
-  $text-color-dark-theme-2: rgba(255, 255, 255, 0.60);
+  $text-color-dark-theme-2: rgba(255, 255, 255, 0.6);
   $text-color-dark-theme-3: rgba(255, 255, 255, 0.38);
-  
+
   // 1.3 - Messages
   $bg-color-warning: #ffe7d9;
   $bg-color-danger: #ffd9de;
   $bg-color-success: #d9fff3;
   $bg-color-info: #dde1f0;
-  
+
   // 1.4 - Messages
   $border-color-dark-theme: #4c4c4c;
-  
+
   // 1.5 - Slides
   $swiper-pagination-bullet-active: #434c5a;
   $swiper-pagination-bullet: #4f4f4e;
-  
+
   // 2 - Transition between themes
   // This is just to make a smooth transition between themes
   @mixin transition {
@@ -134,16 +134,7 @@
       background-color: $bg-color-dark-theme;
     }
   }
-  .back-button,
-  .close-container {
-    background-color: $bg-color-dark-theme-2;
-    color: $text-color-dark-theme;
-    &.button-default,
-    &.button-md.activated,
-    &.button-ios.activated {
-      background-color: $bg-color-dark-theme-2;
-    }
-  }
+
   .swiper-pagination-bullet-active {
     background-color: $swiper-pagination-bullet-active;
   }
@@ -329,9 +320,7 @@
           .funds {
             color: $text-color-dark-theme;
           }
-
         }
-
       }
     }
   }
@@ -384,6 +373,22 @@
 
   .header .toolbar-background {
     background-color: $bg-color-dark-theme;
+  }
+
+  .toolbar {
+    &.toolbar-md,
+    &.toolbar-ios {
+      .back-button,
+      .close-container {
+        background-color: $bg-color-dark-theme-2;
+        color: $text-color-dark-theme !important;
+        &.button-default,
+        &.button-md.activated,
+        &.button-ios.activated {
+          background-color: $bg-color-dark-theme-2;
+        }
+      }
+    }
   }
 
   // 4 - Components
@@ -671,7 +676,11 @@
   page-wallet-details,
   page-bitpay-card {
     ion-content {
-      background: linear-gradient(180deg, $bg-color-dark-theme -0%, $gradient-dark-theme);
+      background: linear-gradient(
+        180deg,
+        $bg-color-dark-theme -0%,
+        $gradient-dark-theme
+      );
     }
 
     .toolbar-background {
@@ -679,7 +688,11 @@
     }
 
     .balance-card {
-      background: linear-gradient(180deg, $bg-color-dark-theme -0%, $gradient-dark-theme);
+      background: linear-gradient(
+        180deg,
+        $bg-color-dark-theme -0%,
+        $gradient-dark-theme
+      );
     }
 
     .tx-history {
