--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -444,17 +444,13 @@ a.royal {
   }
 }
 
-ion-searchbar {
-  background: white;
-  box-shadow: 1px 2px 8px rgba(0, 0, 0, 0.1);
-  padding-bottom: 10px;
-  .searchbar-input-container {
-    input.searchbar-input {
-      background: #f8f8f8;
-      font-size: 16px;
-      border-radius: 8px;
-      box-shadow: none;
-    }
+.search-wrapper {
+  background-color: #f8f8f8;
+  display: flex;
+  align-items: baseline;
+  border-radius: 8px;
+  .text-input-ios {
+    margin: 16px 8px 16px 8px;
   }
 }
 
