share bitpay/copay

--- a/src/theme/dark.scss
+++ b/src/theme/dark.scss
@@ -1084,6 +1084,11 @@
       }
     }
   }
+  page-share {
+    .share-buttons {
+      background-color: $bg-color-dark-theme;
+    }
+  }
 
   // 6 - Other Pages
   page-simplex {
