ion-alert inputs background

--- a/src/theme/dark.scss
+++ b/src/theme/dark.scss
@@ -216,6 +216,9 @@
         color: $text-color-dark-theme;
       }
     }
+    .alert-input {
+      background: $bg-color-dark-theme;
+    }
   }
 
   ion-action-sheet {
