--- a/src/pages/wallet-details/wallet-details.scss
+++ b/src/pages/wallet-details/wallet-details.scss
@@ -322,7 +322,7 @@ page-wallet-details {
     width: $icon-width;
     height: $icon-width;
     box-shadow: none;
-    border: 1px solid #000000;
+    border: 1px solid #d7d7d7;
   }
 
   .locked-balance.item {
