coinbase dark mode

--- a/src/theme/dark.scss
+++ b/src/theme/dark.scss
@@ -819,6 +819,7 @@
     }
   }
   page-wallet-details,
+  page-coinbase-account,
   page-bitpay-card {
     ion-content {
       background: $text-color-dark-theme;
