smoother animation and bg fixed in wallet-details

--- a/src/theme/dark.scss
+++ b/src/theme/dark.scss
@@ -827,7 +827,7 @@
   page-coinbase-account,
   page-bitpay-card {
     ion-content {
-      background: $text-color-dark-theme;
+      background: $bg-color-dark-theme;
     }
 
     .toolbar-background {
