--- a/src/theme/light.scss
+++ b/src/theme/light.scss
@@ -1,4 +1,4 @@
-.light-theme {
+.light {
   // Uses default values. This is just to make a smooth transition between themes
   @mixin transition {
     transition: background-color, color, 150ms cubic-bezier(0, 0, 0.3, 0.3) !important;
