--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -45,21 +45,11 @@ $background-colors: (
   success: #bfffeb,
   info: #eff1f8
 );
-// App background color
-$background-color: white;
-$tabs-background: white;
-$tabs-border-color: rgba(0, 0, 0, 0.1);
-// Item list background color
-$list-background-color: #ffffff;
+
+// Wallet-details
 $feather-dark: #f8f8f9;
 $feather: #fbfbff;
 
-// App background color
-$background-color: white;
-// Item list background color
-$list-background-color: #ffffff;
-$feather-dark: #f8f8f9;
-$feather: #fbfbff;
 // Refresh color
 $refresher-icon-color: color($colors, primary);
 $refresher-icon-font-size: 12px;
@@ -90,8 +80,6 @@ $text-input-md-show-valid-highlight: transparent;
 // App iOS Variables
 // --------------------------------------------------
 // iOS only Sass variables can go here
-$tabs-ios-background: color($colors, blank);
-$tabs-ios-border-color: rgba(0, 0, 0, 0.1);
 $item-ios-divider-color: color($colors, grey);
 $item-ios-padding-top: 16px;
 $item-ios-padding-bottom: 16px;
