--- a/src/components/wallet-selector/wallet-selector.scss
+++ b/src/components/wallet-selector/wallet-selector.scss
@@ -22,11 +22,15 @@ wallet-selector {
     display: flex;
     align-items: center;
     padding: 20px 0;
-    margin: 0 25px;
+    margin: 1px 25px;
     color: color($colors, grey);
     border-bottom: 1px solid rgba(155, 163, 174, 0.2);
     span {
       margin-left: 10px;
     }
+  }
+  .section-header {
+    margin: 0 25px;
+    border-bottom: 1px solid #e0e0e0;
   }
 }
