--- a/src/components/info-sheet/info-sheet.html
+++ b/src/components/info-sheet/info-sheet.html
@@ -368,5 +368,14 @@
       </span>
       <span sheet-button-text translate>GOT IT</span>
     </info-sheet-template>
+
+    <info-sheet-template *ngSwitchCase="'no-wallets-error'" type="danger">
+      <span sheet-title-text translate>Error</span>
+      <span sheet-text translate>
+        You do not have wallets able to receive funds. If you decide to create a wallet, remember it needs to be backed up.
+      </span>
+      <span sheet-button-text translate>Create Wallet</span>
+      <span sheet-second-button-text translate>GOT IT</span>
+    </info-sheet-template>
   </div>
 </action-sheet>
