--- a/src/components/info-sheet/info-sheet.html
+++ b/src/components/info-sheet/info-sheet.html
@@ -369,10 +369,10 @@
       <span sheet-button-text translate>GOT IT</span>
     </info-sheet-template>
 
-    <info-sheet-template *ngSwitchCase="'no-wallets-error'" type="danger">
-      <span sheet-title-text translate>Error</span>
+    <info-sheet-template *ngSwitchCase="'no-wallets-error'" type="warning">
+      <span sheet-title-text translate>No wallet available</span>
       <span sheet-text translate>
-        You do not have wallets able to receive funds. If you decide to create a wallet, remember it needs to be backed up.
+        You do not have a {{params?.coin}} wallet able to receive funds. If you decide to create it, remember it needs to be backed up.
       </span>
       <span sheet-button-text translate>Create Wallet</span>
       <span sheet-second-button-text translate>GOT IT</span>
