Country selector implemented

--- a/src/theme/dark.scss
+++ b/src/theme/dark.scss
@@ -1220,6 +1220,7 @@
     }
   }
   page-alt-currency,
+  page-country-selector,
   page-key-settings,
   page-wallet-information,
   page-wallet-addresses,
