Dark mode. Icons. Wallet selector. Buy Crypto from price oage

--- a/src/pages/buy-crypto/crypto-offers/crypto-offers.scss
+++ b/src/pages/buy-crypto/crypto-offers/crypto-offers.scss
@@ -44,8 +44,8 @@ page-crypto-offers {
       margin-top: 15px;
 
       img {
-        vertical-align: middle;
-        width: 65px;
+        vertical-align: text-bottom;
+        height: 20px;
       }
     }
 
