--- a/src/pages/buy-crypto/crypto-payment-method/crypto-payment-method.scss
+++ b/src/pages/buy-crypto/crypto-payment-method/crypto-payment-method.scss
@@ -3,7 +3,27 @@ page-crypto-payment-method {
     img {
       vertical-align: middle;
       width: 55px;
-      max-height: 17px;
+      max-height: 16px;
+    }
+  }
+  .bp-list {
+    .main-label {
+      font-size: 18px;
+    }
+    .secondary-label {
+      padding-top: 12px;
+      font-size: 12px;
+    }
+    .filter {
+      filter: invert(0.5);
+    }
+    ion-icon.item-img.icon {
+      &.icon-md.item-icon,
+      &.icon-ios.item-icon {
+        img {
+          width: 48px;
+        }
+      }
     }
   }
 }
